@@ -1,14 +1,10 @@
 package de.advent2021;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Day1a {
 
-    private static int[] depths = {
+    private static final int[] depths = {
             199,
             200,
             208,
@@ -23,14 +19,12 @@ public class Day1a {
     private static String filename = "input_day1a.txt";
 
     public static void main(String[] args) {
-
-        var input = readFile();
-        var inputInt = input.stream().map(a -> Integer.parseInt(a.trim())).collect(Collectors.toList());
+        var inputInt = ReadFile.readLinesAsIntegers(filename).toList();
         int numberOfIncreases = calculateNumberOfIncreases(inputInt);
         System.out.println("Number of depth increases: " + numberOfIncreases);
     }
 
-    private static int calculateNumberOfIncreases(List<Integer> depths) {
+    public static int calculateNumberOfIncreases(List<Integer> depths) {
         int lastMeasurement = 0;
         int numberOfIncreases = 0;
         for (int i = 0; i < depths.size(); i++) {
@@ -42,15 +36,4 @@ public class Day1a {
         return numberOfIncreases;
     }
 
-    private static List<String> readFile() {
-        try{
-            Path path = Paths.get(Day1a.class.getClassLoader()
-                    .getResource(filename).toURI());
-            return Files.lines(path).collect(Collectors.toList());
-        }
-        catch(Exception e){
-            e.printStackTrace();
-            return null;
-        }
-    }
 }
